# House-Price-Prediction-Dioxus

./: Cargo.toml
assets/: main.css
src/: load_model.rs  main.rs
