[package]
name = "app"
version = "0.1.0"
authors = ["Santhosh <santhoshgowda9542@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
dioxus = { version = "0.7.4", features = [] }
linfa = { version = "0.7", features = ["serde"] }
linfa-linear = { version = "0.7", features = ["serde"] }

# 🔥 ADD THIS LINE (critical fix)
getrandom = { version = "0.2", features = ["js"] }
ndarray = "0.15"
dioxus-desktop = "0.7.4"
tao = "0.35.0"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
